# llm-eval-api

./: .gitignore  README.md
apps/api/: .env  .env.example  pyproject.toml  sample.jsonl
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5541f2e9a3cd_create_model_configs_table.py  55f1b3f36fad_add_prompt_template_table.py  89831b4228e8_add_scoring_fields_to_evaluation_models.py  a28c4231b43f_add_evaluation_run_and_result_tables.py  b873b6b16107_add_dataset_and_dataset_item_tables.py  d8d96458d07f_add_scoring_fields_to_evaluation_models.py
apps/api/app/: main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  datasets.py  evaluation_runs.py  model_configs.py  prompt_templates.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  base.py  session.py
apps/api/app/models/: __init__.py  dataset.py  evaluation.py  model_config.py  prompt_template.py
apps/api/app/providers/: __init__.py  base.py  factory.py  ollama.py  openai.py
apps/api/app/schemas/: __init__.py  comparison.py  dataset.py  dataset_bulk.py  dataset_import.py  evaluation.py  model_config.py  model_config_test.py  prompt_template.py
apps/api/app/services/: comparison.py  dataset_import.py  evaluation_runs.py  model_config_test.py  prompt_rendering.py  scoring.py
